--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ django-environ==0.11.2
 django-phonenumber-field==8.0.0
 django-phonenumbers==1.0.1
 djangorestframework==3.15.2
+factory-boy==3.3.3
 flake8==7.1.2
 ipython==8.12.3
 mccabe==0.7.0
